# Sona

./: .env.example  .gitignore  .sona-policy.json  .sonacore_lock.py  API.md  CHANGELOG.md  CHANGELOG_0.7.0.md  CODEOWNERS  CODE_OF_CONDUCT.md  COMPLETE_INSTALLATION_GUIDE.md  CONTRIBUTING.md  CROSS_PLATFORM.md  Contributing.md  DOCS_REORGANIZATION_COMPLETE.md  EXTENSION_COMPARISON.md  FILES_CREATED.md  FRESH_INSTALL_REPORT.md  GITHUB_RELEASE_GUIDE.md  GITHUB_RELEASE_NOTES_V080.md  GUI_README.md  INSTALL_EXTENSION.md  LICENSE  MANIFEST.in  Pipfile  QUICK_INSTALL.md  QUICK_START.md  README.md  README.md.backup  README_OLD.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v0.11.1.md  RELEASE_NOTES_v0.12.0.md  RELEASE_NOTES_v0.13.0.md  RELEASE_NOTES_v0.14.0.md  RELEASE_NOTES_v0.14.1.md  RELEASE_NOTES_v0.15.0.md  RELEASE_NOTES_v0.15.1.md  RELEASE_NOTES_v0.5.0.md  RELEASE_NOTES_v0.5.1.md  RELEASE_NOTES_v0.9.2.md  (+117 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
Volumes/: project
backup_files/: alias_import_test.sona  alias_test.sona  debug_tokens.py  direct_fix.py  direct_math_test.sona  direct_param_fix.py  final_function_test.sona  fix_func_eval.py  fix_function_params.py  fix_function_v2.py  fix_param_call.py  fix_param_scope.py  fix_return_stmt.py  func_test.sona  function_test.sona  function_v2_test.sona  math_test.sona  minimal_fix.py  minimal_func.sona  minimal_scope_test.py  minimal_test.sona  minimal_v050_test.sona  param_test.sona  run_final_test.py  run_fixed_test.py  run_function_fix_test.py  run_function_test.py  run_minimal.py  run_minimal_param.py  run_minimal_v050.py  run_simple_func.py  run_test.py  run_v050_patch_test.py  simple_func_test.sona  simple_function_test.sona  simple_import_test.sona  simple_param_fixed.sona  simple_param_test.sona  simple_test.py  simple_v0.5.0_test.sona  (+6 more)
development/: README.md
docs/: ACCESSIBILITY_REFERENCE.md  GUARDIAN_REFERENCE.md  LANGUAGE_REFERENCE.md  PROJECT_ORGANIZATION.md  QUICKSTART.md  README.md  RELEASE_NOTES_v0.5.1.md  REORGANIZATION_SUMMARY.md  SPEC_v0.13.0_GOVERNANCE.md  STDLIB_REFERENCE.md  STRUCTURE_GUIDE.md  cognitive_blocks.md  modules.md  quick_start.md  repl_diagnostic_tools.md  syntax_guide.md  version_compatibility.md
examples/: README.md  README_examples.md  actually_working.sona  ai_collaboration_demo.sona  ai_native_demo.sona  arcade_shooter.sona  ascii_visualization.sona  basic_features.sona  basic_loops.sona  basic_syntax.sona  bejeweled.sona  bubble_shooter.sona  calculator.sona  calendar.sona  cognitive_first_programming.sona  cognitive_preview_010.py  cognitive_preview_010.sona  control_flow.sona  csv_analysis.sona  data_analyzer.sona  data_processing.sona  data_structures.sona  dict_simple.sona  dictionary_features.sona  dictionary_final.sona  dictionary_operations.sona  dictionary_working.sona  endless_runner.sona  error_handling.sona  file_organizer.sona  file_processor.sona  file_writer.sona  flappy_bird.sona  focus_session_010.sona  functions.sona  grade_processor.sona  habit_tracker.sona  hello.sona  hello_test.sona  hello_world.sona  (+89 more)
guardian-demo/: README.md  app.sona  run_demo.ps1  sona.guard.json
gui/: README_MODERN_LAUNCHER.md  __init__.py  advanced_launcher.py  enhanced_launcher.py  game_assets.py  game_classes.py  gui_launcher.py  modern_launcher.py  modern_launcher_tkinter.py  pyside6_installer.py  quick_pyside6_test.py  test_pyside6.py
lsp/: server.py
modules/: my_module.smod
planning/: SONA_0.10.2_PLAN.md
playground/: index.html
scripts/: bug_count.py  demo_function_fix.py  final_function_fix.py  fix_repl_tests.py  prepare_093_release.ps1  prepare_093_release.sh  prepare_extension_runtime.py  reinstall_sona_vscode_extension.ps1  release_gate.ps1  release_hardening.ps1  stdlib_cli_commands.py  test_lsp_handshake.py
sona/: License.mdc  __init__.py  __main__.py  ai_backend_integration.py  ai_cognitive_integration.py  ai_integration.py  ast_nodes.py  ast_nodes_v090.py  cli.py  cognitive_core.py  cognitive_integration.py  cognitive_keywords.py  cognitive_parser.py  cognitive_repl.py  cognitive_runtime.py  cognitive_syntax.py  control_flow_v090.py  documented_interpreter.py  dual_mode_repl.py  enhanced_interpreter_backup.py  enhanced_interpreter_backup_20250814.py  enhanced_repl.py  errors.py  flags.py  grammar.lark  grammar_clean.lark  grammar_documented.lark  grammar_v090.lark  grammar_v091_fixed.lark  grammar_v0_8_0.lark  interpreter(debug).py  interpreter.py  interpreter.py.bak  interpreter.py.broken  interpreter.py.final_backup  interpreter.py.param_fix_bak  interpreter.py_bak  interpreter_backup_20250802_160424.py  interpreter_fixed.py  interpreter_v050_final.py  (+24 more)
sona-ai-native-programming-0.9.4/: LICENSE  README.md  extension.js  package.json  sona-ai-native-programming-0.9.4.vsix
sona-vscode-extension/: .gitignore  .vscodeignore  CHANGELOG.md  LICENSE  README.md  eslint.config.mjs  language-configuration.json  package-lock.json  package.json
sona.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
spm-standalone/: .gitignore  README.md  pyproject.toml
spm-standalone/docs/: README.md  manifest.md
spm-standalone/scripts/: smoke_test.py
spm-standalone/src/sona_spm/: spm.py
stdlib/: adapt.smod  affirm.smod  alias.smod  anchor.smod  assert.smod  audio.smod  boundary.smod  breadcrumb.smod  certainty.smod  chunk.smod  chunk_read.smod  color.smod  config.smod  context.smod  contract.smod  contrast.smod  crypto.smod  csv.smod  date.smod  datetime.smod  detail.smod  drift.smod  energy.smod  env.smod  explain.smod  flow.smod  focus.smod  format.smod  fs.smod  graph.smod  guardian.smod  gui.smod  hashing.smod  http.smod  hyperfocus.smod  intent.smod  interrupt.smod  io.smod  io_enhanced.smod  journal.smod  (+65 more)
tests/: console_demo.py  core_function_test.py  function_param_fixes_test.py  function_test.sona  minimal_param_test.sona  phase3_comprehensive_test.py  simple_string_test.sona  test_cli_errors.py  test_cli_help.py  test_cli_run.py  test_cognitive_monitor.py  test_cognitive_statements_parser.py  test_core.py  test_emotion_module.py  (+17 more)
(+964 files in other folders)
