[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sona-lang"
version = "0.14.1"
description = "Sona Programming Language with Cognitive Accessibility and Neurodivergent-First Features"
authors = [{name = "WayCore Inc.", email = "info@waycore.com"}]
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = [
	"programming-language",
	"ai-native",
	"cognitive-accessibility",
	"runtime-governance",
	"smod",
]
dependencies = [
	"lark-parser>=0.12.0",
	"pygls>=1.3.1,<2",
]
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Intended Audience :: Developers",
]

[project.urls]
"Bug Reports" = "https://github.com/Bryantad/Sona/issues"
"Source" = "https://github.com/Bryantad/Sona.git"
"Documentation" = "https://github.com/Bryantad/Sona/wiki"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["sona*", "stdlib*"]
exclude = [
	"tests*",
	"docs*",
	"examples*",
	"extensions*",
	"vscode-extension*",
	"planning*",
	"assets*",
]

[tool.setuptools.package-data]
sona = ["grammar.lark", "stdlib/MANIFEST.json"]
stdlib = ["*.smod", "utils/*.smod", "utils/validate/*.smod"]

[project.optional-dependencies]
ai = [
	"torch>=2.2; platform_system!='Windows'",
	"transformers>=4.43",
	"accelerate>=0.33",
]
toml = [
	"tomli-w>=1.0.0",
]
dev = [
	"ruff>=0.5",
	"black>=24.4",
	"pytest>=8.0",
	"coverage>=7.5",
	"pytest-cov>=5.0",
	"mypy>=1.10",
	"hypothesis>=6.100",
	"pytest-randomly>=3.15",
]

[project.scripts]
sona = "sona.cli:main"
spm = "sona.spm:main"

[tool.black]
line-length = 100
target-version = ["py311"]
# Limit formatting strictly to core package files
include = "sona/.*\\.pyi?$"
extend-exclude = '''
/(demos|examples|playground|benchmarks|notebooks|legacy|scripts|.venv|build|dist)/
|working_memory\.py
|unified_interpreter\.py
|utils/debug\.py
|utils/suppress\.py
|sona/type_system/.*
|type_aware_interpreter\.py
|stdlib/utils/string/smod\.py
|traditional_repl\.py
|sona/stdlib/.*
|sona/performance/.*
|sona_cli_clean\.py
|sona_unified_cli\.py
|features/string_interpolation\.py
|enhanced_repl\.py
'''

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E","F","I","UP","B","SIM","RUF"]
ignore = []
exclude = [
	"demos/**",
	"examples/**",
	"playground/**",
	"benchmarks/**",
	"notebooks/**",
	"legacy/**",
	"scripts/**",
	".venv/**",
	"build/**",
	"dist/**",
	"**/working_memory.py",
	"**/unified_interpreter.py",
	"**/utils/debug.py",
	"**/utils/suppress.py",
	"**/type_system/**",
	"**/type_aware_interpreter.py",
	"**/stdlib/**",
	"**/performance/**",
	"**/sona_cli_clean.py",
	"**/sona_unified_cli.py",
	"**/features/string_interpolation.py",
	"**/enhanced_repl.py",
]

[tool.ruff.format]
line-length = 100
quote-style = "double"
indent-style = "space"
line-ending = "auto"

